--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Jozo Knezevic</h1>
-      <p>I'm <span class="typed" data-typed-items="Desinger, Developer, Freelancer, Software Engineer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Software Engineer"></span></p>
     </div>
   </section><!-- End Hero -->
 
