--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="jozo.tech/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight:wght@700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
+<meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
     <title>Restaurant Menu</title>
 </head>
 <body>
